# content-moderation

./: Dockerfile  README.md  pyproject.toml
app/: deps.py  main.py  pii.py  schemas.py
data/: rus_phone_regions.xlsx  russian_pii_patterns.xlsx
